--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "db:seed": "knex seed:run",
+    "test": "cross-env DB_ENV=testing jest --watch"
   },
   "repository": {
     "type": "git",
@@ -20,12 +23,17 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "knex": "^0.21.0",
+    "pg": "^8.4.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "jest": "^26.5.3",
+    "nodemon": "^2.0.3",
+    "supertest": "^5.0.0"
   }
 }
