--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "db:seed": "knex seed:run",
     "test": "cross-env DB_ENV=testing jest --watch"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/Sprint-Challenge-Authentication.git"
@@ -34,8 +37,8 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "jest": "^26.5.3",
-    "nodemon": "^2.0.3",
-    "supertest": "^5.0.0"
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
